# katha

./: CLAUDE.md  Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs  theme.rs
src/config/: mod.rs  paths.rs
src/data/: codex_history_reader.rs  codex_session_reader.rs  history_reader.rs  mod.rs  session_reader.rs
src/domain/: billing.rs  history.rs  message.rs  mod.rs  session.rs
src/export/: json.rs  markdown.rs  mod.rs  writer.rs
src/layout/: mod.rs  two_pane.rs
src/search/: engine.rs  filter.rs  mod.rs  query.rs
src/tea/: message.rs  mod.rs  model.rs  update.rs
src/tui/: app.rs  event.rs  mod.rs  terminal.rs
src/views/: export_dialog.rs  help.rs  mod.rs  preview_pane.rs  session_detail.rs  session_list.rs
src/widgets/: line_highlight.rs  message_block.rs  mod.rs  project_tree.rs  search_bar.rs  session_table.rs  status_bar.rs
