[package]
name = "katha"
version = "0.1.0"
edition = "2024"
authors = ["dorayakikun"]
description = "TUI for browsing Claude Code conversation history"

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["osc52"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.1"

[dev-dependencies]
tempfile = "3.14"
